--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,21 @@
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
+        <item name="material_drawer_selected_text">@color/primary_dark</item>
+        <item name="material_drawer_background">@color/main_background_gray</item>
     </style>
+
+    <style name="AppTheme.ToolbarStyle">
+        <item name="android:textColor">@color/primary_dark</item>
+        <item name="android:textColorPrimary">@color/actionbar_text</item>
+        <item name="android:textColorSecondary">@color/primary_dark</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
